# waters

./: .gitignore  README.md  pyproject.toml
scripts/: cleanup.sh  finalize.sh  merge.sh  pick.sh  setup.sh
src/waters/: __main__.py  cli.py  config.py  defaults.py  directives.py  orchestrator.py  paths.py
