[project]
name = "waters"
version = "0.1.0"
description = "Run multiple Claude Code agents in parallel via tmux on isolated git worktrees."
requires-python = ">=3.11"

[project.scripts]
waters = "waters.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waters"]
